[package]
name = "legion_filament"
version = "0.1.0"
authors = ["Alec Thilenius <alec@thilenius.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
# sdl2 = { version = "0.31", features = ["bundled", "static-link"] }
legion = { git = "https://github.com/TomGillen/legion.git" }
legion_transform = { git = "https://github.com/AThilenius/legion_transform.git" }
nalgebra = "0.18"
shrev = "1.1"
winit = "0.19"

[build-dependencies]
bindgen = "0.51"
cc = { version = "1.0", features = ["parallel"] }
