[package]
name = "legion_filament"
version = "0.1.0"
authors = ["Alec Thilenius <alec@thilenius.com>"]
edition = "2018"

[dependencies]
filament = { git = "https://github.com/AThilenius/filament-rs.git" }
legion = { git = "https://github.com/TomGillen/legion.git" }
legion_transform = { git = "https://github.com/AThilenius/legion_transform.git" }
nalgebra = "0.18"
shrev = "1.1"
winit = "0.19"
