[package]
name = "legion_filament"
version = "0.1.0"
authors = ["Alec Thilenius <alec@thilenius.com>"]
edition = "2018"

[dependencies]
bincode = "1.2"
blake2 = "0.8"
# filament = { git = "https://github.com/AThilenius/filament-rs.git" }
filament = { path = "../filament-rs" }
legion = { git = "https://github.com/jaynus/legion.git", branch = "systems" }
# legion_transform = { git = "https://github.com/AThilenius/legion_transform.git" }
legion_transform = { path = "../legion_transform" }
log = "0.4"
nalgebra = "0.18"
rayon = "1.2"
serde = "1.0"
serde_derive = "1.0"
shrev = "1.1"
winit = "0.19"
